--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   })();
 </script>
 <body>
-    <p>Te quero hoje mais do que ontem!😍😍😍 </p>
+    <p>Te quero hoje mais do que ontem!😍 </p>
     <div class="buttons">
         <button id="sim">Sim</button>
         <button id="nao">Não</button>
